--- a/config.yml
+++ b/config.yml
@@ -47,8 +47,8 @@ external_services:
   custom_dashboards:
     enabled: true
   tracing:
-    in_cluster_url: 'http://jaeger-collector-query.istio-system:16686'
-    url: 'http://jaeger-collector-query.istio-system:16686'
+    in_cluster_url: 'http://10.67.37.209:16686'
+    url: 'http://10.67.37.209:16686'
     use_grpc: false
   prometheus:
     url: 'http://prod.landing-app-select.sgt.sg2.api:8481/select/0/prometheus'
